# Makefile.am

AUTOMAKE_OPTIONS = foreign
SUBDIRS = src

man_MANS = \
	doc/logc_defines.3 \
	doc/logc_changeLogLevel.3 \
	doc/logc_log.3 \
	doc/logc_logArray.3 \
	doc/logc_logArrayBasic.3 \
	doc/logc_logArrayFine.3 \
	doc/logc_logArrayFinest.3 \
	doc/logc_logArrayInfo.3 \
	doc/logc_logArrayWarning.3 \
	doc/logc_logBasic.3 \
	doc/logc_logEnter.3 \
	doc/logc_logError.3 \
	doc/logc_logErrorBasic.3 \
	doc/logc_logErrorFine.3 \
	doc/logc_logErrorFinest.3 \
	doc/logc_logErrorInfo.3 \
	doc/logc_logErrorWarning.3 \
	doc/logc_logFine.3 \
	doc/logc_logFinest.3 \
	doc/logc_logInfo.3 \
	doc/logc_logLeave.3 \
	doc/logc_logWarning.3 \
	doc/logc_logger.3 \
	doc/logc_registerLogger.3 \
	doc/logc_removeLogger.3 \
	doc/logc_setLogFile.3 \
	doc/logc_setLogFormat.3

dist_doc_DATA = \
	doc/nglogc_manual.pdf

EXTRA_DIST = \
	$(man_MANS) \
	Changes \
	release_rev

